lang/src/ast2/snapshots/rain_lang__ast2__parser__test__fn_call_one_arg.snap
---
source: lang/src/ast2/parser.rs
expression: "parse_display_expr(\"foo(1)\")"
---
FnCall(
 Ident(
  foo
 )
 IntegerLiteral(
  1
 )
)
