lang/src/ast2/snapshots/rain_lang__ast2__parser__test__maths_parens2.snap
---
source: lang/src/ast2/parser.rs
expression: "parse_display_expr(\"(3 - b) * c\")"
---
BinaryOp(
 BinaryOp(
  IntegerLiteral(
   3
  )
  -
  Ident(
   b
  )
 )
 *
 Ident(
  c
 )
)
