lang/src/ast2/snapshots/rain_lang__ast2__parser__test__number_add.snap
---
source: lang/src/ast2/parser.rs
expression: "parse_display_expr(\"1 + 1\")"
---
BinaryOp(
 IntegerLiteral(
  1
 )
 +
 IntegerLiteral(
  1
 )
)
