lang/src/ast2/snapshots/rain_lang__ast2__parser__test__number_literal.snap
---
source: lang/src/ast2/parser.rs
expression: "parse_display_expr(\"4\")"
---
IntegerLiteral(
 4
)
