lang/src/ast2/snapshots/rain_lang__ast2__parser__test__number_multiply_add_precedence2.snap
---
source: lang/src/ast2/parser.rs
expression: "parse_display_expr(\"5 + 2 * 3\")"
---
BinaryOp(
 IntegerLiteral(
  5
 )
 +
 BinaryOp(
  IntegerLiteral(
   2
  )
  *
  IntegerLiteral(
   3
  )
 )
)
