lang/src/ast2/snapshots/rain_lang__ast2__parser__test__string_literal.snap
---
source: lang/src/ast2/parser.rs
expression: "parse_display_expr(\"\\\"asldjf\\\"\")"
---
StringLiteral(
 "asldjf"
)
